--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
     <!-- Custom styles for this template -->
     <link href="css/index.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Great+Vibes" rel="stylesheet">
 </head>
 <!-- NAVBAR
 ================================================== -->
@@ -77,17 +78,12 @@
 ================================================== -->
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
-    <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-    </ol>
     <div class="carousel-inner" role="listbox">
         <div class="item active">
             <img class="first-slide" src="img/1.png" alt="First slide">
             <div class="container">
                 <div class="carousel-caption">
-                    <h1>爱生活</h1>
+                    <h1>Love life</h1>
                 </div>
             </div>
         </div>
@@ -95,7 +91,7 @@
             <img class="second-slide" src="img/2.png" alt="Second slide">
             <div class="container">
                 <div class="carousel-caption">
-                    <h1>爱自由</h1>
+                    <h1>Love freedom</h1>
                 </div>
             </div>
         </div>
@@ -103,7 +99,7 @@
             <img class="third-slide" src="img/3.png" alt="Second slide">
             <div class="container">
                 <div class="carousel-caption">
-                    <h1>爱美景</h1>
+                    <h1>Love beauty</h1>
                 </div>
             </div>
         </div>
@@ -111,19 +107,11 @@
             <img class="fourth-slide" src="img/4.png" alt="Third slide">
             <div class="container">
                 <div class="carousel-caption">
-                    <h1>爱代码</h1>
+                    <h1>Love code</h1>
                 </div>
             </div>
         </div>
     </div>
-    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-    </a>
 </div><!-- /.carousel -->
 
 
